# Fyrox

./: Cargo.toml  MIGRATION_REPORT.md
.github/workflows/: wgpu-validation.yml
docs/: wgpu-color-space.md  wgpu-cross-platform.md  wgpu-shader-author-guide.md
editor/: Cargo.toml
editor-standalone/: Cargo.toml
editor/resources/shaders/: gizmo.shader  grid.shader  overlay.shader  sprite_gizmo.shader
editor/resources/shaders/wgpu/: highlight.shader  sprite_gizmo.shader
editor/src/: highlight.rs  lib.rs  overlay.rs
editor/src/plugins/collider/: mod.rs
editor/src/scene/: mod.rs
fyrox/: Cargo.toml
fyrox-graphics-gl/src/: program.rs
fyrox-graphics-wgpu/: Cargo.toml
fyrox-graphics-wgpu/src/: bind_group_cache.rs  buffer.rs  color_space.rs  format_helpers.rs  framebuffer.rs  geometry_buffer.rs  lib.rs  metrics.rs  pipeline.rs  program.rs  query.rs  read_buffer.rs  render_pass.rs  sampler.rs  server.rs  shader_lint.rs  texture.rs  uniform_pool.rs
fyrox-graphics-wgpu/src/shaders/: shared.glsl  shared.wgsl
fyrox-graphics-wgpu/tests/: wgpu_smoke.rs
fyrox-graphics/src/: gpu_program.rs  gpu_texture.rs  server.rs
fyrox-impl/: Cargo.toml
fyrox-impl/src/: lib.rs
fyrox-impl/src/engine/: mod.rs
fyrox-impl/src/renderer/: bundle.rs  convolution.rs  debug_renderer.rs  fxaa.rs  gbuffer.rs  light.rs  light_volume.rs  mod.rs  resources.rs  ui_renderer.rs
fyrox-impl/src/renderer/bloom/: blur.rs  mod.rs
fyrox-impl/src/renderer/cache/: shader.rs  texture.rs
fyrox-impl/src/renderer/hdr/: mod.rs
fyrox-impl/src/renderer/occlusion/: mod.rs  optimizer.rs
fyrox-impl/src/renderer/shaders/: ambient_light.shader  blit.shader  bloom.shader  debug.shader  decal.shader  deferred_directional_light.shader  (+13 more)
fyrox-material/: Cargo.toml
fyrox-material/src/shader/: mod.rs
fyrox-texture/src/: lib.rs
(+28 files in other folders)
